# burn-wizard

./: .eslintrc.cjs  .gitignore  AI_HANDOFF_GUIDE.md  Burn-Wizard-Desktop.bat  CODEBASE_ARCHITECTURE.md  COMPREHENSIVE_ANALYSIS_RESULTS.md  CURRENT_SESSION_ANALYSIS.md  FIXES_APPLIED_REPORT.md  FIX_LOG.md  ISSUE_REPORT.md  PROJECT_STATUS.md  README.md  REAL_ISSUES_FOUND.md  REAL_ISSUES_MANUAL_TESTING.md  REAL_ISSUES_REPORT.md  TUTORIAL_TESTING_REPORT.md  claude-provider-switcher.bat  create-icon.ps1  create-shortcut.ps1  desktop-app.js  desktop-launcher.cjs  lighthouserc.json  package-lock.json  package.json  start-burn-wizard - Shortcut (2).lnk  start-burn-wizard.bat  switch-to-claude.bat  switch-to-deepseek.bat  tailwind.config.js  tauri-build.bat  tauri-debug-build.bat  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude-code/: ISSUES.md
.github/: CI_PIPELINE_SUMMARY.md  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  deploy.yml  pr-validation.yml  pwa-validation.yml  security.yml
app/: index.html
app/src/: App.tsx
app/src/components/: AnalgesiaTips.tsx  AuthenticationDialog.tsx  BodyMap.tsx  BodyRegionHeatMap.tsx  BurnDepthChart.tsx  BurnDepthSelector.tsx  Header.tsx  (+10 more)
docs/: ARCHITECTURE.md  CLINICAL_NOTE_TEMPLATE.md  Clinical_Validation_Framework.md  Input_Validation_Security_Report.md  MASTER_DOCUMENT.md  Medical_Data_Verification.md  Risk_Register.md  Risk_Register_Summary.md  SAFETY.md  SRS.md  V&V_PLAN.md
docs/DHF/: design_inputs.md  design_outputs.md
scripts/: generate-icons.js
src-tauri/: Cargo.toml  tauri.conf.json
(+51 files in other folders)
