[package]
name = "burn-wizard"
version = "1.0.0"
description = "Burn Wizard - Educational burn assessment and fluid management calculator for healthcare professionals"
authors = ["Perry Martin <perry.martin@student.edu>"]
license = "MIT"
repository = "https://github.com/pmartin1915/burn-wizard"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-log = "2"
